# curso-yuneta

./: .gitignore  CMakeLists.txt  README.rst
.kdev4/: curso-yuneta.kdev4
01-print-hello-world/c/: CMakeLists.txt  README.rst  c.kdev4  makefile
01-print-hello-world/c/.kdev4/: c.kdev4
01-print-hello-world/c/docs/: 01hello_world.mkv
01-print-hello-world/c/src/: main.c
02-print-hello-world-loop/: task.rst
02-print-hello-world-loop/c/: CMakeLists.txt  README.rst
02-print-hello-world-loop/c/docs/: 02_hello_world_loop_command_help.mkv  02hello_world_loop.mkv
02-print-hello-world-loop/c/src/: main.c
02-print-hello-world-loop/js/: 02helloworldloop.js  README.rst  package-lock.json  package.json
02-print-hello-world-loop/js/src/: 02helloworldloop.js  package-lock.json  package.json
02-print-hello-world-loop/py/: helloworldloop.py  setup.py
02-print-hello-world-loop/py/src/: 02helloworldloop.py
03-print-hello-name/c/: CMakeLists.txt  README.rst
03-print-hello-name/c/src/: main.c
04-listen-conecction-tpc/c/: CMakeLists.txt
04-listen-conecction-tpc/c/src/: listenerport.c
04-listen-conecction-tpc/py/: connecttpcport.py  setup.py
05-listen-tpc-file/c/: CMakeLists.txt  README.rst
05-listen-tpc-file/c/src/: listenerfile.c  listenerfile_old.c
05-listen-tpc-file/py/: connecttpcfile.py  file.txt  setup.py
06-listen-tpc-multi-file/c/: CMakeLists.txt  README.rst
06-listen-tpc-multi-file/c/src/: listenermultifile.c
06-listen-tpc-multi-file/py/: README.rst  connecttpcmultifile.py  file1.txt  file2.txt  setup.py
06-yuno-listener/batches/: _demo.curso-yuneta.com.json  _deploy_all.sh  receive_file.7000.json
06-yuno-listener/receive_file/: CMakeLists.txt  README.rst
06-yuno-listener/receive_file/src/: c_decoder_receive_file.c  c_decoder_receive_file.h  c_receive_file.c  c_receive_file.h  main.c  yuno_receive_file.c  yuno_receive_file.h
